--- a/package.json
+++ b/package.json
@@ -50,19 +50,19 @@
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.2",
     "@storybook/addon-a11y": "^8.5.0-alpha.3",
-    "@storybook/addon-essentials": "8.5.0-alpha.3",
-    "@storybook/addon-interactions": "8.5.0-alpha.3",
+    "@storybook/addon-essentials": "8.5.0-alpha.6",
+    "@storybook/addon-interactions": "8.5.0-alpha.6",
     "@storybook/addon-links": "8.5.0-alpha.3",
     "@storybook/addon-onboarding": "8.5.0-alpha.3",
     "@storybook/blocks": "8.5.0-alpha.3",
-    "@storybook/react": "8.5.0-alpha.3",
-    "@storybook/react-vite": "8.5.0-alpha.3",
-    "@storybook/test": "8.5.0-alpha.3",
+    "@storybook/react": "8.5.0-alpha.6",
+    "@storybook/react-vite": "8.5.0-alpha.6",
+    "@storybook/test": "8.5.0-alpha.6",
     "@types/react": "18.3.12",
     "@vitejs/plugin-react": "4.3.3",
     "eslint": "9.14.0",
     "gh-pages": "6.2.0",
-    "storybook": "8.5.0-alpha.3",
+    "storybook": "^8.5.0-alpha.3",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   },
